# python-module

./: .gitignore  .readthedocs.yaml  LICENSE.txt  README.md  pyproject.toml  quizbowlAPI.py  setup.py  tox.ini
.github/workflows/: publish.yml  test.yml
docs/: conf.py  index.rst
docs/api/: qbreader.api_utils.rst  qbreader.asynchronous.rst  qbreader.consts.rst  qbreader.rst  qbreader.synchronous.rst  qbreader.types.rst
examples/: sync.md
qbreader/: __init__.py  _api_utils.py  _consts.py  api_utils.py  asynchronous.py  quizbowlAPI.py  synchronous.py  types.py
qbreader.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: __init__.py  test_async.py  test_sync.py  test_types.py  test_utils.py
